--- a/www/web/viewer.html
+++ b/www/web/viewer.html
@@ -2,7 +2,7 @@
 
 <html dir="ltr" mozdisallowselectionprint>
   <head>
-       
+    <script src="cordova.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="google" content="notranslate" />
