--- a/www/web/viewer.html
+++ b/www/web/viewer.html
@@ -1210,6 +1210,19 @@ document.addEventListener("DOMContentLoaded", function () {
 
   });
 });
+
+
+
+
+
+
+document.addEventListener("deviceready", function () {
+    window.isCordovaReady = true;
+    console.log("Cordova READY inside viewer!");
+});
+
+
+  
 </script>
 
     
