--- a/www/web/index.html
+++ b/www/web/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    
+<script src="../cordova.js"></script>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval' data: gap:;">
     <meta name="viewport" content="width=device-width, initial-scale=1">
