--- a/www/index.html
+++ b/www/index.html
@@ -1,143 +1,105 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>PDF Reader</title>
-
+<meta charset="UTF-8">
+<title>PDF Reader - Dev Software</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        background: #f2f2f2;
+    body { font-family: Arial; background:#fafafa; padding:20px; }
+    h2 { margin-bottom:10px; }
+    button {
+        padding:12px 18px;
+        background:#007bff;
+        border:none;
+        color:white;
+        border-radius:6px;
+        font-size:16px;
+        margin-bottom:20px;
     }
-
-    header {
-        background: #6200ee;
-        color: white;
-        padding: 15px;
-        text-align: center;
-        font-size: 20px;
-    }
-
-    .btn {
-        background: #6200ee;
-        color: white;
-        padding: 14px;
-        border: none;
-        width: 90%;
-        margin: 20px auto;
-        display: block;
-        border-radius: 8px;
-        font-size: 18px;
-    }
-
-    .list {
-        margin: 20px;
-    }
-
+    #list { padding-top:15px; }
     .pdf-item {
-        background: white;
-        padding: 12px;
-        margin-bottom: 10px;
-        border-radius: 6px;
-    }
-
-    /* Bottom Sheet */
-    #sheet {
-        position: fixed;
-        left: 0;
-        right: 0;
-        bottom: -300px;
-        background: #fff;
-        box-shadow: 0 -3px 10px rgba(0,0,0,0.3);
-        border-radius: 15px 15px 0 0;
-        padding: 20px;
-        transition: 0.3s ease;
-        text-align: center;
-    }
-
-    #sheet.show {
-        bottom: 0;
+        padding:10px;
+        background:white;
+        border-radius:6px;
+        margin-bottom:8px;
+        border:1px solid #ddd;
     }
 </style>
-</head>
-
-<body>
-
-<header>PDF Reader</header>
-
-<button class="btn" id="openSheetBtn">İzin / PDF Listeleme</button>
-
-<div id="pdfList" class="list"></div>
-
-<!-- Bottom Sheet -->
-<div id="sheet">
-    <h3>Dosya Erişim İzni</h3>
-    <p>PDF dosyalarını taramak için erişim izni gerekir.</p>
-    <button class="btn" id="askPermission">İzin Ver</button>
-</div>
 
 <script type="module">
-import { Filesystem, Directory } from "https://cdn.jsdelivr.net/npm/@capacitor/filesystem@5/dist/esm/index.js";
-import { App } from "https://cdn.jsdelivr.net/npm/@capacitor/app@5/dist/esm/index.js";
+    import { Capacitor } from "https://cdn.jsdelivr.net/npm/@capacitor/core@latest/dist/capacitor.js";
 
-const sheet = document.getElementById("sheet");
-const openBtn = document.getElementById("openSheetBtn");
-const askBtn = document.getElementById("askPermission");
-const listDiv = document.getElementById("pdfList");
+    const Permissions = {
+        async check() {
+            return await Capacitor.Plugins.Permissions.query({ name: "android.permission.READ_MEDIA_DOCUMENTS" });
+        },
 
-openBtn.onclick = () => {
-    sheet.classList.add("show");
-};
+        async request() {
+            return await Capacitor.Plugins.Permissions.request({
+                permissions: [
+                    "android.permission.READ_MEDIA_DOCUMENTS",
+                    "android.permission.READ_MEDIA_IMAGES",
+                    "android.permission.READ_MEDIA_VIDEO"
+                ]
+            });
+        },
 
-askBtn.onclick = async () => {
-    sheet.classList.remove("show");
+        async openSettings() {
+            await Capacitor.Plugins.App.openSettings();
+        }
+    };
 
-    try {
-        // Android SAF (gerçek izin penceresi)
-        const pick = await Filesystem.requestPermissions();
-        console.log("Permission result:", pick);
+    async function listPDF() {
+        const resultBox = document.getElementById("list");
+        resultBox.innerHTML = "<b>PDF aranıyor...</b>";
 
-        await listPDFs();
+        const perm = await Permissions.check();
 
-    } catch (e) {
-        alert("İzin alınamadı!");
-        console.error(e);
-    }
-};
-
-async function listPDFs() {
-    listDiv.innerHTML = "<h3>PDF taranıyor...</h3>";
-
-    try {
-        const result = await Filesystem.readdir({
-            path: "",
-            directory: Directory.Documents
-        });
-
-        const pdfs = result.files.filter(f => f.name.toLowerCase().endsWith(".pdf"));
-
-        if (pdfs.length === 0) {
-            listDiv.innerHTML = "<p>Cihazda PDF bulunamadı.</p>";
+        if (!perm.granted) {
+            resultBox.innerHTML = `
+                <div style='color:#b00'>İzin verilmedi!</div><br>
+                <button onclick="openSettings()">Ayarlara Git</button>
+            `;
             return;
         }
 
-        listDiv.innerHTML = "<h3>Bulunan PDF Dosyaları:</h3>";
-
-        pdfs.forEach(f => {
-            const item = document.createElement("div");
-            item.className = "pdf-item";
-            item.innerText = f.name;
-            listDiv.appendChild(item);
+        // Capacitor Filesystem çağrısı
+        const files = await Capacitor.Plugins.Filesystem.readdir({
+            path: "",
+            directory: "DOCUMENTS"
         });
 
-    } catch (e) {
-        listDiv.innerHTML = "<p>Erişim hatası: " + e + "</p>";
-        console.error(e);
+        const pdfs = files.files.filter(f => f.toLowerCase().endsWith(".pdf"));
+
+        if (pdfs.length === 0) {
+            resultBox.innerHTML = "<i>PDF bulunamadı.</i>";
+            return;
+        }
+
+        resultBox.innerHTML = "";
+        pdfs.forEach(f => {
+            resultBox.innerHTML += `<div class='pdf-item'>📄 ${f}</div>`;
+        });
     }
-}
+
+    window.askPermission = async () => {
+        const res = await Permissions.request();
+        if (res.granted) listPDF();
+        else openSettings();
+    };
+
+    window.openSettings = () => Permissions.openSettings();
+    window.listPDF = () => listPDF();
 </script>
+
+</head>
+<body>
+
+<h2>PDF Reader</h2>
+
+<button onclick="askPermission()">📂 PDF İzni Ver & Listele</button>
+
+<div id="list"></div>
 
 </body>
 </html>
