--- a/www/web/index.html
+++ b/www/web/index.html
@@ -2,19 +2,60 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <title>PDF Reader</title>
+    <style>
+        body { font-family: Arial; padding: 20px; }
+        button { padding: 14px 22px; font-size: 18px; }
+        #pdfList { margin-top: 30px; }
+        .item { padding: 10px; border-bottom: 1px solid #ccc; }
+    </style>
 </head>
 <body>
 
-<button onclick="requestAllFiles()">İzin Ver</button>
+<h2>PDF Reader</h2>
 
-<script type="module">
-    import { Capacitor } from "https://cdn.jsdelivr.net/npm/@capacitor/core@latest/dist/capacitor.js";
+<button onclick="openAllFilesAccessSettings()">📂 Tüm Dosya Erişimine İzin Ver</button>
+<button onclick="loadPDFs()">📄 PDF'leri Tara</button>
 
-    function requestAllFiles() {
-        Capacitor.Plugins.AndroidFullFileAccess.openSettings();
+<div id="pdfList"></div>
+
+<script>
+/* Android 11+ MANAGE_EXTERNAL_STORAGE ayarlarına gider */
+function openAllFilesAccessSettings() {
+    window.open(
+        "intent://settings/manageAllFilesAccessPermission/" +
+        "#Intent;scheme=android.settings.MANAGE_ALL_FILES_ACCESS_PERMISSION;end",
+        "_system"
+    );
+}
+
+/* PDF'leri yükle (custom plugin üzerinden) */
+async function loadPDFs() {
+    if (!window.AndroidFullFileAccess) {
+        alert("Plugin yüklenmedi!");
+        return;
     }
 
-    window.requestAllFiles = requestAllFiles;
+    try {
+        const result = await window.AndroidFullFileAccess.getAllPdfs();
+        const list = result?.files || [];
+
+        const container = document.getElementById("pdfList");
+        container.innerHTML = "<h3>Bulunan PDF Dosyaları:</h3>";
+
+        if (list.length === 0) {
+            container.innerHTML += "<p>PDF bulunamadı.</p>";
+            return;
+        }
+
+        list.forEach(file => {
+            container.innerHTML += `<div class='item'>📄 ${file}</div>`;
+        });
+
+    } catch (err) {
+        alert("PDF tarama sırasında hata: " + err);
+    }
+}
 </script>
 
 </body>
